--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "sharp": "^0.25.4",
     "validator": "^13.1.1"
