--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "sharp": "^0.25.4",
     "validator": "^13.1.1"
   }
